force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/agf__ADM_Task__c.object-meta.xml
<CustomObject>
    <description>Created to import task data from SF</description>
    <label>Task</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>