force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>agf__Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>