force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>agf__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>