force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Completed_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Completed_On__c</fullName>
    <label>Completed On</label>
    <type>DateTime</type>
</CustomField>