force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Due_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Due_By__c</fullName>
    <label>Due By</label>
    <type>Date</type>
</CustomField>