force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>agf__Hours_Remaining__c</fullName>
    <label>Hours Remaining</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>