force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Order__c.field-meta.xml
<CustomField>
    <fullName>agf__Order__c</fullName>
    <description>The one-based order of this task within the specified work.</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>