force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__SprintId__c.field-meta.xml
<CustomField>
    <fullName>agf__SprintId__c</fullName>
    <description>The denormalized field used by streaming api to filter task updates.</description>
    <label>SprintId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>