force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/fields/agf__Starting_Hours__c.field-meta.xml
<CustomField>
    <fullName>agf__Starting_Hours__c</fullName>
    <label>Starting Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>