force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/validationRules/agf__Assigned_To_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Assigned_To_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( agf__Assigned_To__c )</errorConditionFormula>
    <errorMessage>Assigned To cannot be blank</errorMessage>
</ValidationRule>