force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Task__c/validationRules/agf__Subject_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Subject_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( agf__Subject__c )</errorConditionFormula>
    <errorMessage>Subject cannot be blank</errorMessage>
</ValidationRule>